client connect media driver + aeron library