@@ -8,6 +8,11 @@ repositories {
     mavenCentral()
 }
 
+java {
+    sourceCompatibility = "17"
+    targetCompatibility = "17"
+}
+
 dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
@@ -38,6 +43,25 @@ application {
     // Define the main class for the application.
     mainClass = 'jekko.Jekko'
     applicationName = 'jekko'
+
+    applicationDefaultJvmArgs = [
+        // Server hotspot vm
+        "-server",
+
+        // GC logging
+        // "-Xlog:gc",
+        "-Xlog:gc,gc+init",
+        // "-Xlog:gc*",
+        // "-Xlog:gc*::time",
+
+        // Heap size.
+        "-XX:InitialHeapSize=64m",
+        "-XX:MaxHeapSize=64m",
+
+        // JDK 17 Strongly Encapsulated JDK Internals
+        // aeron
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    ]
 }
 
 tasks.named('test') {
